--- a/연습/nodejs prc/public/write.html
+++ b/연습/nodejs prc/public/write.html
@@ -5,12 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>이미지 업로드</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="./moment.js"></script>
+    <script>
+        $(function(){
+            const curDate = moment().format('YYYY-MM-DD -- HH:mm:ss');
+            $('#createDate').attr('value', curDate);
+            $('#photoInput').change(function(){
+                alert('이미지가 변경되었습니다.')
+                readUrl(this);
+            })
+        });
+
+        //이미지 파일 미리보기
+        function readUrl(input){
+            if(input.files && input.files[0]){
+                const reader = new FileReader();
+                reader.onload = function(e){
+                    $('#photoOutput').attr('src', e.target.result);
+                }
+                reader.readAsDataURL(input.files[0])
+            }
+        }
+        
+    </script>
 </head>
 <body>
     <h2>이미지 업로드</h2>
-    <form method="post" action="write" enctype="multipart/form-data">
+    <form method="post" action="/write" enctype="multipart/form-data">
+        <p>현재시간 : <input type="text" name="createDate" id="createDate" readonly></p>
         <p>제목 : <input type="text" name="title"></p>
         <p>이미지 : <input type="file" name="photo" id="photoInput"></p>
+        <p><img src="" id="photoOutput" width="200"></p>
         <p><input type="submit" value="확인"></p>
     </form>
 </body>
