--- a/연습/react prc/react webgame/1.react test/test.html
+++ b/연습/react prc/react webgame/1.react test/test.html
@@ -6,33 +6,83 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 </head>
 
 <body>
     <div id="root">
 
     </div>
-    <script>
+    <script type="text/babel">
         'use stict'
         class LikeButton extends React.Component {
             constructor(props) {
                 super(props);
                 this.state = { liked: false };
             }
+
+            // 그외 자주 쓰이는거 1 삼항연산자
+            // { this.state.liked ? true : true }
+
+            // 자주 쓰이는거 2 map 배열방식
+            // {
+            //     [1, 2, 3].map((i) => {
+            //         return <div>{i}</div>
+            //     })
+            // }
+
             render() {
                 if (this.state.liked) {
                     return '좋아요를 눌렀습니다.'
                 }
-                return React.createElement('button', { onClick: () => this.setState({ liked: true }) }, 'Like');
+
+                /*
+                @@Study MEMO
+                
+                this.state.liked = true; 
+                => 쓸 수 없음 
+                => 리액트에서 객체를 함부로 바꾸지 말 것(불변성)
+                => 객체를 복사해야함. 고로 아래와 같이 사용.
+                this.setState({liked:true});
+
+                마찬가지로 배열을 다루는 함수중에 
+                pop, push, shift, unshift, splice => '사용안함' (배열을 직접 수정)
+                concat, slice => 이거 위주로 '사용'(새로운 배열을 생성);
+
+                */
+
+                // React 17버전 코드
+                // return React.createElement('button', { onClick: () => this.setState({ liked: true }) }, 'Like');
+                return (
+                    <div>
+                        <button onClick={() => { this.setState({ liked: true }); }}>
+                            Like
+                        </button>
+                        <button onClick={() => { this.setState({ liked2: true }) }}>
+                            {this.state.liked2 ? '감사합니다!' : '좋아요를 눌러주세요'}
+                        </button>
+                        <button>
+                            {[1, 2, 3].map((i) => {
+                                return <div>{i}</div>
+                            })
+                            }
+                        </button>
+                    </div>
+                )
             }
+            // 리액트 jsx에서 만드는 html태그들은 소문자로 만들어야함
         }
 
     </script>
-    <script>
-        ReactDOM.render(React.createElement(LikeButton), document.querySelector('#root'))
-        // ReactDOM.render(e(LikeButton), document.querySelector('#root'));
+    <script type="text/babel">
+        // React 17버전 코드
+        // ReactDOM.render(React.createElement(LikeButton), document.querySelector('#root'))
+
+        // React 18버전 코드 ,
+        // render()대신 createRoot 호출.
+        ReactDOM.createRoot(document.querySelector('#root')).render(<LikeButton />);
     </script>
 </body>
 
