--- a/연습/react prc/react webgame/1.react test/1.gugudan.html
+++ b/연습/react prc/react webgame/1.react test/1.gugudan.html
@@ -60,7 +60,9 @@
 
             render() {
                 return (
-                    <div>
+                    // 감싸주기 위한  <div></div> 태그를 빈 태그로 해줄수도있는데 babel2가 설치되어있어야 함,
+                    // => React.Fragment 써주는 걸로 처리가 가능
+                    <React.Fragment>
                         <div>{this.state.firstNum} * {this.state.secondNum} = ?</div>
                         <form onSubmit={this.onSubmit}>
                             <input type="number" value={this.state.value} onChange={this.onChange} />
@@ -68,7 +70,7 @@
                         </form>
                         <p>{this.state.inputValue} </p>
                         <p>{this.state.result}</p>
-                    </div>
+                    </React.Fragment>
                 )
             }
         }
